objects/Global_Bypass_Processes_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global Bypass Control Panel</description>
    <fields>
        <fullName>Run_Assignments_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Assignments Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Flows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Flows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Process_Builder__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Run Process Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Workflows_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Workflows Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Objects_Bypass__c</fullName>
        <label>Trigger Objects Bypass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Global Bypass Processes Settings</label>
</CustomObject>